[package]
name = "rlbox_from_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linfa = "0.6.1"
linfa-linear = "0.6.1"
ndarray = "0.15.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
bindgen = "0.69.1"

[lib]
name = "mylib"
crate-type = ["cdylib"]
path = "src/lib.rs"
